--- a/zitaocai-portfolio-nextjs/src/app/globals.css
+++ b/zitaocai-portfolio-nextjs/src/app/globals.css
@@ -2,7 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+body {
+  color: #000;
+  background-color: #fff;
+}
+
+[data-theme="dark"] body {
+  background-color: #000;
+  color: #fff;
+}
+
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -30,4 +40,4 @@ body {
   .text-balance {
     text-wrap: balance;
   }
-}
+} */
